--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "@types/uuid": "^8.3.3",
     "@typescript-eslint/eslint-plugin": "^5.9.0",
     "@typescript-eslint/parser": "^5.9.0",
-    "dotenv": "^10.0.0",
     "eslint": "^8.6.0",
     "inquirer": "^8.2.0",
     "js-yaml": "^4.1.0",
@@ -28,7 +27,9 @@
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.45.0",
     "@aws-sdk/util-dynamodb": "^3.45.0",
+    "axios": "^0.24.0",
     "bcrypt": "^5.0.1",
+    "dotenv": "^11.0.0",
     "joi": "^17.5.0",
     "jsonwebtoken": "^8.5.1",
     "uuid": "^8.3.2"
