--- a/resources/dynamodb.yml
+++ b/resources/dynamodb.yml
@@ -1,4 +1,16 @@
 Resources:
+    # Devices
+    deviceTable:
+      Type: AWS::DynamoDB::Table
+      Properties:
+        TableName: ${env:APP_NAME}-${self:custom.stage}-devices
+        BillingMode: PAY_PER_REQUEST
+        AttributeDefinitions:
+          - AttributeName: deviceId
+            AttributeType: S
+        KeySchema:
+          - AttributeName: deviceId
+            KeyType: HASH  # Partition key
     # Temperature
     temperatureTable:
       Type: AWS::DynamoDB::Table
@@ -15,6 +27,7 @@ Resources:
             KeyType: HASH  # Partition key
           - AttributeName: timestamp
             KeyType: RANGE  # Sort key
+    # Humidity
     humidityTable:
       Type: AWS::DynamoDB::Table
       Properties:
