--- a/serverless.yml
+++ b/serverless.yml
@@ -1,5 +1,5 @@
 service: smarthome-api
-frameworkVersion: '2.71.0'
+frameworkVersion: '2.72.0'
 
 package:
   excludeDevDependencies: true
@@ -67,6 +67,13 @@ functions:
           method: POST
       - httpApi:
           path: /auth
+          method: GET
+  # Devices
+  devices:
+    handler: build/handlers/devices.handler
+    events:
+      - httpApi:
+          path: /devices
           method: GET
   # Temperature
   temperature:
